--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,24 +4,19 @@ phases:
     install:
         runtime-versions:
             dotnet: 3.1
-
-    pre_build:
-        commands:
-            - dotnet restore .\AWSDemo.sln
-
     build:
         commands:
+            - dotnet build -c Release ./AWSDemo/AWSDemo.csproj
             - dotnet test -c Release ./AWSDemoTests/AWSDemoTests.csproj --logger trx --results-directory ./testresults
             - dotnet publish -c release -o ./build_output AWSDemo/AWSDemo.csproj
-
+    
 reports:
     DotnetTestExamples:
         file-format: VisualStudioTrx
         files:
             - '**/*'
         base-directory: './testresults'
-
+        
 artifacts:
     files:
         - AWSDemo/build_output/**/*
-    
